# speexdsp_android_demo

app/: CMakeLists.txt
app/src/main/cpp/: aecm_core.cc  aecm_core.h  aecm_core_c.cc  aligned_malloc.cc  array_view.h  audio_buffer.cc  audio_buffer.h  audio_converter.cc  audio_converter.h  audio_processing.h  audio_util.cc  audio_util.h  channel_buffer.cc  channel_buffer.h  delay_estimator.cc  delay_estimator_wrapper.cc  division_operations.c  downsample_fast.c  echo_control_mobile.cc  echo_control_mobile_impl.cc  echo_control_mobile_impl.h  min_max_operations.c  myspeex.cpp  push_sinc_resampler.cc  push_sinc_resampler.h  safe_conversions.h  signal_processing_library.h  sinc_resampler.cc  sinc_resampler.h  spl_init.c  splitting_filter.c  splitting_filter.cc  splitting_filter.h  three_band_filter_bank.cc  three_band_filter_bank.h
app/src/main/java/com/gloomyer/myspeex/: MainActivity.java
app/src/main/java/com/gloomyer/myspeex/interfaces/: SpeexJNIBridge.java
app/src/main/res/layout/: activity_main.xml
